# world-cup-predictor

./: .gitignore  LICENSE  MODEL_IMPROVEMENTS_R32.md  PREDICTIONS.md  README.md  config.toml
baseline_model_v1/: ARCHIVE_NOTE.md  PREDICTIONS.md  README.md  config.toml  pyproject.toml
baseline_model_v1/data/input/: rankings_sources.txt  squads.csv  squads_ea.csv  squads_sources.txt
baseline_model_v1/data/raw/: transfermarkt.json
baseline_model_v1/predictions_log/2026-06-13/: match_predictions.csv  tournament_probabilities.csv
baseline_model_v1/predictions_log/2026-06-14/: match_predictions.csv  tournament_probabilities.csv
baseline_model_v1/predictions_log/2026-06-15/: tournament_probabilities.csv
baseline_model_v1/predictions_log/2026-06-16/: manifest.json
baseline_model_v1/predictions_log/2026-06-17/: manifest.json
baseline_model_v1/predictions_log/2026-06-18/: manifest.json  match_predictions.csv
baseline_model_v1/predictions_log/2026-06-19/: match_predictions.csv
baseline_model_v1/scripts/: apply_transfermarkt.py  build_match_features.py  build_rankings.py  calibrate_shootouts.py  calibrate_team_strength.py  calibrate_tournaments.py
baseline_model_v1/src/worldcup_predictor/: __init__.py  cli.py  logbook.py  report.py
baseline_model_v1/tests/: test_backtest.py  test_logbook.py  test_model.py  test_tournament.py  test_update_xg.py
docs/: build-spec-coverage.md
predictions_log/: index.jsonl
scripts/: backtest_2022.py  build_historical_squads.py  build_squads.py  download_ea_ratings.py  download_transfermarkt.py  import_kalshi_odds.py  (+4 more)
(+42 files in other folders)
